# SccaSoloPointsCalculator

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.js  Cargo.toml  LICENSE  README.md  add_region.py  championship.py  driver_count.py  full_results.py  package-lock.json  package.json  pronto_fixer.py  region_fixer.py  rust-toolchain.toml
SampleData/: 2022_Event1-DavidExport.csv  2022_Event4-DavidExport.csv  2022_Event7-DavidExport.csv  2022_Event8-DavidExport.csv  2022_StL_Class_thru_event4.xls  2023_Event1-DavidExport.csv  2023_Event2-DavidExport.csv  2023_Event3-DavidExport.csv  Event6-DavidExport.csv  Event7-DavidExport.csv  Event8-DavidExport.csv  Event9-DavidExport.csv  StL_Class_thru_event2.xls  StL_Class_thru_event3.xls  StL_Class_thru_event5.xls  StL_Class_thru_event6.xls  StL_Ladies_thru_event2.xls  StL_Ladies_thru_event3.xls  StL_Ladies_thru_event5.xls  StL_Ladies_thru_event6.xls  StL_Novice_thru_event2.xls  StL_Novice_thru_event3.xls  StL_Novice_thru_event5.xls  StL_Novice_thru_event6.xls  StL_PAX_thru_event2.xls  StL_PAX_thru_event3.xls  StL_PAX_thru_event5.xls  StL_PAX_thru_event6.xls  event3_full.csv  event4_fullresults.csv  event5_fullresults.csv  full_results.csv
SampleData/2022/: 2022_Event1-DavidExport.csv  2022_Event8-DavidExport.csv  2022_StL_Class_thru_event1.xls  2022_StL_Ladies_thru_event1.xls  2022_StL_Ladies_thru_event4.xls  2022_StL_Novice_thru_event1.xls  2022_StL_Novice_thru_event4.xls  2022_StL_PAX_thru_event1.xls  2022_StL_PAX_thru_event4.xls  2022_event5-DavidExport.csv  2022_event6-DavidExport.csv
SampleData/2023/: 2023_Event2-DavidExport.csv  2023_Event3-DavidExport.csv  2023_Event4-DavidExport.csv
SampleData/2024/: ACTIVE_2024_Tire_Rack_SCCA_St._Louis_CAM_Challenge-All Inclusive Report.csv  DAY2-Q1_2024_Tire_Rack_SCCA_St._Louis_CAM_Challenge-All Inclusive Report.csv  cam_challenge_results-new.csv
SampleData/2025/: 20250629-ProntoEventExport.csv  20250824-ProntoEventExport.csv  StL_Class_thru_event4.xls  StL_Ladies_thru_event4.xls  StL_Novice_thru_event4.xls  StL_PAX_thru_event4.xls  event1-DavidExport.csv  event3-DavidExport.csv  (+2 more)
public/: index.html  pax-index.html
src/: App.tsx  index.css  index.tsx  lib.rs
src-rs/: lib.rs
(+70 files in other folders)
