[package]
name = "scca-solo-points-engine"
description = "Business logic for the SCCA Solo Points Calculator"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/DavidZemon/SccaSoloPointsCalculator"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src-rs/lib.rs"

[dependencies]
bigdecimal = "0.4.3"
calamine = "0.24.0"
csv = "1.3.0"
float-cmp = "0.9.0"
lazy_static = "1.4.0"
js-sys = "0.3.69"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde-wasm-bindgen = "0.6.5"
strum = "0.26.2"
strum_macros = "0.26.2"
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }

[dev-dependencies]
rstest = "0.19.0"
mockall = "0.12.1"
