[package]
name = "scca-solo-points-engine"
description = "Business logic for the SCCA Solo Points Calculator"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/DavidZemon/SccaSoloPointsCalculator"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src-rs/lib.rs"

[dependencies]
bigdecimal = "0.4.7"
calamine = "0.26.1"
csv = "1.3.1"
#float-cmp = "0.10.0"
lazy_static = "1.5.0"
#js-sys = "0.3.77"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
strum = "0.26.3"
strum_macros = "0.26.4"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }

[dev-dependencies]
rstest = "0.24.0"
mockall = "0.13.1"
